--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 *.iml
-/.idea
+.idea
 .gradle
 /local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
 .DS_Store
 /build
 /captures
